src/camera_control.rs


    /// 设置 SDK 内部图像缓存节点个数，大于等于 1，在抓图前调用
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `nNum` - 缓存节点个数
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 调用该接口可以设置 SDK 内部图像缓存节点个数，在调用 MV_CC_StartGrabbing 开始抓图前调用。
    /// 不同相机因为取流方式不同，不调用 MV_CC_SetImageNodeNum 接口情况下，默认不同相机默认缓存节点个数不同：比如 双 U 内部分配默认 3 个节点
    /// SDK 实际分配的节点个数 = SDK 内部预分配的个数 + 用户分配的节点 (MV_CC_SetImageNodeNum);若系统内存资源不够，SDK 内部会重新计算，以重新计算的节点个数为准
    /// 该接口不支持 MV_CAMERALINK_DEVICE 类型的设备。
    /// 该接口仅对 SDK 内部分配缓存模式有效，外部分配缓存模式（即调用 MV_CC_RegisterBuffer）无效;
    pub unsafe fn MV_CC_SetImageNodeNum(handle: *mut c_void, nNum: c_uint) -> c_int;

    /// 设置取流策略
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `enGrabStrategy` - 策略枚举值
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口定义了四种取流策略，用户可以根据实际需求进行选择。具体描述如下：
    /// - OneByOne: 从旧到新一帧一帧的从输出缓存列表中获取图像，打开设备后默认为该策略
    /// - LatestImagesOnly: 仅从输出缓存列表中获取最新的一帧图像，同时清空输出缓存列表
    /// - LatestImages: 从输出缓存列表中获取最新的 OutputQueueSize 帧图像，其中 OutputQueueSize 范围为 1-ImageNodeNum，可用 MV_CC_SetOutputQueueSize 接口设置，ImageNodeNum 默认为 1，
    ///   可用 MV_CC_SetImageNodeNum 接口设置 OutputQueueSize 设置成 1 等同于 LatestImagesOnly 策略，OutputQueueSize 设置成 ImageNodeNum 等同于 OneByOne 策略
    /// - UpcomingImage: 在调用取流接口时忽略输出缓存列表中所有图像，并等待设备即将生成的一帧图像。（该策略不支持 MV_USB_DEVICE 设备）
    ///   该接口在 Windows 平台仅支持 MV_GIGE_DEVICE、MV_USB_DEVICE 设备，在 Linux 平台仅支持 MV_USB_DEVICE 设备；
    pub unsafe fn MV_CC_SetGrabStrategy(
        handle: *mut c_void,
        enGrabStrategy: crate::MV_GRAB_STRATEGY,
    ) -> c_int;

    /// 设置输出缓存个数（只有在 MV_GrabStrategy_LatestImages 策略下才有效，范围：1-ImageNodeNum）
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `nOutputQueueSize` - 输出缓存个数
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口需与 LatestImages 取流策略配套调用，用于设置 LatestImages 策略下最多允许缓存图像的个数。可以在取流过程中动态调节输出缓存个数
    /// 若为双 U 口相机，nOutputQueueSize 最小应设置为 2
    /// 该接口在 Windows 平台仅支持 MV_GIGE_DEVICE、MV_USB_DEVICE 设备，在 Linux 平台仅支持 MV_USB_DEVICE 设备；
    pub unsafe fn MV_CC_SetOutputQueueSize(handle: *mut c_void, nOutputQueueSize: c_uint) -> c_int;

    /// 获取设备信息，取流之前调用
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstDevInfo` - 返回给调用者有关设备信息结构体指针（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 支持用户在打开设备后获取设备信息，不支持 GenTL 设备
    /// 若该设备是 GigE 设备，则调用该接口存在阻塞风险，因此不建议在取流过程中调用该接口。
    pub unsafe fn MV_CC_GetDeviceInfo(
        handle: *mut c_void,
        pstDevInfo: *mut MV_CC_DEVICE_INFO,
    ) -> c_int;

    /// 获取各种类型的信息
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstInfo` - 返回给调用者有关设备各种类型的信息结构体指针（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 接口里面输入需要获取的信息类型（指定 MV_ALL_MATCH_INFO 结构体中的 nType 类型），获取对应的信息（在 MV_ALL_MATCH_INFO 结构体中 pInfo 里返回）
    /// 该接口的调用前置条件取决于所获取的信息类型，获取 GigE 设备的 MV_MATCH_TYPE_NET_DETECT 信息需在开启抓图之后调用，获取 U3V 设备的 MV_MATCH_TYPE_USB_DETECT 信息需在打开设备之后调用
    /// 信息类型 MV_MATCH_TYPE_NET_DETECT 对应结构体 MV_MATCH_INFO_NET_DETECT，只支持 MV_GIGE_DEVICE 相机/MV_GENTL_GIGE_DEVICE 相机
    /// 信息类型 MV_MATCH_TYPE_USB_DETECT 对应结构体 MV_MATCH_INFO_USB_DETECT，只支持 MV_USB_DEVICE 类型相机
    /// 该接口不支持 MV_CAMERALINK_DEVICE 设备。
    pub unsafe fn MV_CC_GetAllMatchInfo(
        handle: *mut c_void,
        pstInfo: *mut crate::MV_ALL_MATCH_INFO,
    ) -> c_int;

    // ========================================================================
    // Part 3: 采集卡的配置
    // ========================================================================

    /// 枚举采集卡
    ///
    /// # 参数
    /// * `nTLayerType` - 采集卡接口类型 eg: (MV_GIGE_INTERFACE | MV_CAMERALINK_INTERFACE | MV_CXP_INTERFACE| MV_XOF_INTERFACE | MV_VIR_INTERFACE）
    /// * `pInterfaceInfoList` - 采集卡列表（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口不支持 arm 和 Linux32 平台
    pub unsafe fn MV_CC_EnumInterfaces(
        nTLayerType: c_uint,
        pInterfaceInfoList: *mut crate::MV_INTERFACE_INFO_LIST,
    ) -> c_int;

    /// 创建采集卡句柄
    ///
    /// # 参数
    /// * `handle` - 采集卡句柄（输出参数）
    /// * `pInterfaceInfo` - 采集卡信息
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口不支持 arm 和 Linux32 平台
    pub unsafe fn MV_CC_CreateInterface(
        handle: *mut *mut c_void,
        pInterfaceInfo: *mut crate::MV_INTERFACE_INFO,
    ) -> c_int;

    /// 通过采集卡 ID 创建采集卡句柄
    ///
    /// # 参数
    /// * `handle` - 采集卡句柄（输出参数）
    /// * `pInterfaceID` - 采集卡 ID
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口不支持 arm 和 Linux32 平台
    pub unsafe fn MV_CC_CreateInterfaceByID(
        handle: *mut *mut c_void,
        pInterfaceID: *const c_char,
    ) -> c_int;

    /// 打开采集卡
    ///
    /// # 参数
    /// * `handle` - 采集卡句柄
    /// * `pReserved` - 预留，直接填 NULL
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口不支持 arm 和 Linux32 平台
    pub unsafe fn MV_CC_OpenInterface(handle: *mut c_void, pReserved: *mut c_char) -> c_int;

    /// 关闭采集卡
    ///
    /// # 参数
    /// * `handle` - 采集卡句柄
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口不支持 arm 和 Linux32 平台
    pub unsafe fn MV_CC_CloseInterface(handle: *mut c_void) -> c_int;

    /// 销毁采集卡句柄
    ///
    /// # 参数
    /// * `handle` - 采集卡句柄
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// MV_CC_DestroyInterface 如果传入相机句柄，其效果和 MV_CC_DestroyHandle 相同; 该接口不支持 arm 和 Linux32 平台
    pub unsafe fn MV_CC_DestroyInterface(handle: *mut c_void) -> c_int;

    /// 通过采集卡句柄枚举设备
    ///
    /// # 参数
    /// * `handle` - 采集卡句柄
    /// * `pstDevList` - 设备列表（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 设备列表的内存是在 SDK 内部分配的，多线程调用该接口时会进行设备列表内存的释放和申请
    /// 建议尽量避免多线程枚举操作。
    pub unsafe fn MV_CC_EnumDevicesByInterface(
        handle: *mut c_void,
        pstDevList: *mut MV_CC_DEVICE_INFO_LIST,
    ) -> c_int;

    // ========================================================================
    // Part 4: 相机/采集卡属性万能配置接口
    // ========================================================================

    /// 获取 Integer 属性值
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `strKey` - 属性键值，如获取宽度信息则为"Width"
    /// * `pstIntValue` - 返回给调用者有关设备属性结构体指针（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 连接设备之后调用该接口可以获取 int 类型的指定节点的值。
    pub unsafe fn MV_CC_GetIntValueEx(
        handle: *mut c_void,
        strKey: *const c_char,
        pstIntValue: *mut crate::MVCC_INTVALUE_EX,
    ) -> c_int;

    /// 设置 Integer 型属性值
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `strKey` - 属性键值，如获取宽度信息则为"Width"
    /// * `nValue` - 想要设置的设备的属性值
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 连接设备之后调用该接口可以设置 int 类型的指定节点的值。
    pub unsafe fn MV_CC_SetIntValueEx(
        handle: *mut c_void,
        strKey: *const c_char,
        nValue: i64,
    ) -> c_int;

    /// 获取 Enum 属性值
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `strKey` - 属性键值，如获取像素格式信息则为"PixelFormat"
    /// * `pstEnumValue` - 返回给调用者有关设备属性结构体指针（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 连接设备之后调用该接口可以获取 Enum 类型的指定节点的值。
    pub unsafe fn MV_CC_GetEnumValue(
        handle: *mut c_void,
        strKey: *const c_char,
        pstEnumValue: *mut crate::MVCC_ENUMVALUE,
    ) -> c_int;

    /// 获取 Enum 属性值（扩展版本）
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `strKey` - 属性键值，如获取像素格式信息则为"PixelFormat"
    /// * `pstEnumValue` - 返回给调用者有关设备属性结构体指针（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 连接设备之后调用该接口可以获取 Enum 类型的指定节点的值，区别与 MV_CC_GetEnumValue，此接口返回的枚举有效个数扩展到 256 个。
    pub unsafe fn MV_CC_GetEnumValueEx(
        handle: *mut c_void,
        strKey: *const c_char,
        pstEnumValue: *mut crate::MVCC_ENUMVALUE_EX,
    ) -> c_int;

    /// 设置 Enum 型属性值
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `strKey` - 属性键值，如获取像素格式信息则为"PixelFormat"
    /// * `nValue` - 想要设置的设备的属性值
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 连接设备之后调用该接口可以设置 Enum 类型的指定节点的值
    pub unsafe fn MV_CC_SetEnumValue(
        handle: *mut c_void,
        strKey: *const c_char,
        nValue: c_uint,
    ) -> c_int;

    /// 获取 Enum 型节点指定值的符号
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `strKey` - 属性键值，如获取像素格式信息则为"PixelFormat"
    /// * `pstEnumEntry` - 想要获取的设备的属性符号（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 连接设备之后调用该接口可以获取 Enum 类型的指定节点的值所对应的符号
    pub unsafe fn MV_CC_GetEnumEntrySymbolic(
        handle: *mut c_void,
        strKey: *const c_char,
        pstEnumEntry: *mut crate::MVCC_ENUMENTRY,
    ) -> c_int;

    /// 设置 Enum 型属性值（通过字符串）
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `strKey` - 属性键值，如获取像素格式信息则为"PixelFormat"
    /// * `strValue` - 想要设置的设备的属性字符串
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 连接设备之后调用该接口可以设置 Enum 类型的指定节点的值
    pub unsafe fn MV_CC_SetEnumValueByString(
        handle: *mut c_void,
        strKey: *const c_char,
        strValue: *const c_char,
    ) -> c_int;

    /// 获取 Float 属性值
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `strKey` - 属性键值
    /// * `pstFloatValue` - 返回给调用者有关设备属性结构体指针（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 连接设备之后调用该接口可以获取 float 类型的指定节点的值
    pub unsafe fn MV_CC_GetFloatValue(
        handle: *mut c_void,
        strKey: *const c_char,
        pstFloatValue: *mut crate::MVCC_FLOATVALUE,
    ) -> c_int;

    /// 设置 float 型属性值
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `strKey` - 属性键值
    /// * `fValue` - 想要设置的设备的属性值
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 连接设备之后调用该接口可以设置 float 类型的指定节点的值
    pub unsafe fn MV_CC_SetFloatValue(
        handle: *mut c_void,
        strKey: *const c_char,
        fValue: f32,
    ) -> c_int;

    /// 获取 Boolean 属性值
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `strKey` - 属性键值
    /// * `pbValue` - 返回给调用者有关设备属性值（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 连接设备之后调用该接口可以获取 bool 类型的指定节点的值
    pub unsafe fn MV_CC_GetBoolValue(
        handle: *mut c_void,
        strKey: *const c_char,
        pbValue: *mut bool,
    ) -> c_int;

    /// 设置 Boolean 型属性值
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `strKey` - 属性键值
    /// * `bValue` - 想要设置的设备的属性值
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 连接设备之后调用该接口可以设置 bool 类型的指定节点的值
    pub unsafe fn MV_CC_SetBoolValue(
        handle: *mut c_void,
        strKey: *const c_char,
        bValue: bool,
    ) -> c_int;

    /// 获取 String 属性值
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `strKey` - 属性键值
    /// * `pstStringValue` - 返回给调用者有关设备属性结构体指针（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 连接设备之后调用该接口可以获取 string 类型的指定节点的值
    pub unsafe fn MV_CC_GetStringValue(
        handle: *mut c_void,
        strKey: *const c_char,
        pstStringValue: *mut crate::MVCC_STRINGVALUE,
    ) -> c_int;

    /// 设置 String 型属性值
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `strKey` - 属性键值
    /// * `strValue` - 想要设置的设备的属性值
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 连接设备之后调用该接口可以设置 string 类型的指定节点的值
    pub unsafe fn MV_CC_SetStringValue(
        handle: *mut c_void,
        strKey: *const c_char,
        strValue: *const c_char,
    ) -> c_int;

    /// 设置 Command 型属性值
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `strKey` - 属性键值
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 连接设备之后调用该接口可以设置指定的 Command 类型节点
    pub unsafe fn MV_CC_SetCommandValue(handle: *mut c_void, strKey: *const c_char) -> c_int;
